# last-mile-optimizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
data/: bls_driver_wages.csv  fuel_prices.csv
data/sample_scenarios/: austin_pharmacy.csv  brooklyn_grocery.csv  chicago_florist.csv
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/components/: AddressForm.tsx  HowItWorks.tsx  ProgressBar.tsx  RouteMap.tsx  SavingsPanel.tsx  ScenarioLoader.tsx
notebooks/: methodology.ipynb
outputs/: dashboard.html
src/: cost_calculator.py  distance_matrix.py  geocoder.py  naive_router.py  route_visualizer.py  vrp_solver.py
tests/: conftest.py  test_cost_calculator.py  test_distance_matrix.py  test_e2e.py  test_geocoder.py  test_vrp_solver.py
