[project]
name = "last-mile-optimizer"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "ortools>=9.12.0,<9.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "geopy>=2.4.0",
]

[tool.vercel]
entrypoint = "api/index.py"
